-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
Jon and I have done a bulk update on regression tests except hotspot to use the new @modules syntax:
@modules m Simple dependence on public API for m
@modules m/p --add-exports m/p=ALL-UNNAMED
@modules m/p:open --add-opens m/p=ALL=UNNAMED
@modules m/p:+open --add-exports m/p=ALL-UNNAMED --add-opens m/p=ALL=UNNAMED
Can you update the hotspot tests from :private to :open or :+open if the test requires both static references and deep reflection acces?
jtreg nightly has this support already.
Mandy
@modules m Simple dependence on public API for m
@modules m/p --add-exports m/p=ALL-UNNAMED
@modules m/p:open --add-opens m/p=ALL=UNNAMED
@modules m/p:+open --add-exports m/p=ALL-UNNAMED --add-opens m/p=ALL=UNNAMED
Can you update the hotspot tests from :private to :open or :+open if the test requires both static references and deep reflection acces?
jtreg nightly has this support already.
Mandy