test/runtime/Throwable/StackTraceLogging.java
@@ -52,7 +52,7 @@ public class StackTraceLogging {
     public static void main(String[] args) throws Exception {
         ProcessBuilder pb = ProcessTools.createJavaProcessBuilder("-Xlog:stacktrace=info",
                                                                   "-XX:MaxJavaStackTraceDepth=1024",
-                                                                  "--add-exports-private",
+                                                                  "--add-opens",
                                                                   "java.base/java.lang=ALL-UNNAMED",
                                                                   "TestThrowable");
         analyzeOutputOn(pb);
